--- a/artificial_neural_network.ipynb
+++ b/artificial_neural_network.ipynb
@@ -281,6 +281,328 @@
     "            \n",
     "    return AL, caches"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 - Cost function\n",
+    "\n",
+    "Now we will implement forward and backward propagation. We need to compute the cost, because we want to check if your model is actually learning.\n",
+    "\n",
+    "Compute the cross-entropy cost $J$, using the following formula: $$-\\frac{1}{m} \\sum\\limits_{i = 1}^{m} (y^{(i)}\\log\\left(a^{[L] (i)}\\right) + (1-y^{(i)})\\log\\left(1- a^{[L](i)}\\right)) \\tag{7}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cost(AL, Y):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function defined by equation (7).\n",
+    "\n",
+    "    Arguments:\n",
+    "    AL -- probability vector corresponding to your label predictions, shape (1, number of examples)\n",
+    "    Y -- true \"label\" vector (for example: containing 0 if non-cat, 1 if cat), shape (1, number of examples)\n",
+    "\n",
+    "    Returns:\n",
+    "    cost -- cross-entropy cost\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = Y.shape[1]\n",
+    "\n",
+    "    # Compute loss from aL and y.\n",
+    "    cost = -1/m*np.sum(np.dot(Y, np.log(AL).T) + np.dot(1-Y, np.log(1-AL).T))\n",
+    "    \n",
+    "    cost = np.squeeze(cost)      # To make sure your cost's shape is what we expect (e.g. this turns [[17]] into 17).\n",
+    "    assert(cost.shape == ())\n",
+    "    \n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 - Backward propagation module\n",
+    "\n",
+    "Just like with forward propagation, we will implement helper functions for backpropagation. Remember that back propagation is used to calculate the gradient of the loss function with respect to the parameters. \n",
+    "\n",
+    "**Reminder**: \n",
+    "<img src=\"images/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n",
+    "<caption><center> **Figure 3** : Forward and Backward propagation for *LINEAR->RELU->LINEAR->SIGMOID* <br> *The purple blocks represent the forward propagation, and the red blocks represent the backward propagation.*  </center></caption>\n",
+    "\n",
+    "<!-- \n",
+    "For those of you who are expert in calculus (you don't need to be to do this assignment), the chain rule of calculus can be used to derive the derivative of the loss $\\mathcal{L}$ with respect to $z^{[1]}$ in a 2-layer network as follows:\n",
+    "\n",
+    "$$\\frac{d \\mathcal{L}(a^{[2]},y)}{{dz^{[1]}}} = \\frac{d\\mathcal{L}(a^{[2]},y)}{{da^{[2]}}}\\frac{{da^{[2]}}}{{dz^{[2]}}}\\frac{{dz^{[2]}}}{{da^{[1]}}}\\frac{{da^{[1]}}}{{dz^{[1]}}} \\tag{8} $$\n",
+    "\n",
+    "In order to calculate the gradient $dW^{[1]} = \\frac{\\partial L}{\\partial W^{[1]}}$, you use the previous chain rule and you do $dW^{[1]} = dz^{[1]} \\times \\frac{\\partial z^{[1]} }{\\partial W^{[1]}}$. During the backpropagation, at each step you multiply your current gradient by the gradient corresponding to the specific layer to get the gradient you wanted.\n",
+    "\n",
+    "Equivalently, in order to calculate the gradient $db^{[1]} = \\frac{\\partial L}{\\partial b^{[1]}}$, you use the previous chain rule and you do $db^{[1]} = dz^{[1]} \\times \\frac{\\partial z^{[1]} }{\\partial b^{[1]}}$.\n",
+    "\n",
+    "This is why we talk about **backpropagation**.\n",
+    "!-->\n",
+    "\n",
+    "Now, similar to forward propagation, you are going to build the backward propagation in three steps:\n",
+    "- LINEAR -> ACTIVATION backward where ACTIVATION computes the derivative of either the ReLU or sigmoid activation\n",
+    "- [LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID backward (whole model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear-Activation backward\n",
+    "\n",
+    "For layer $l$, the linear part is: $Z^{[l]} = W^{[l]} A^{[l-1]} + b^{[l]}$ (followed by an activation).\n",
+    "\n",
+    "Suppose we have already calculated the derivative $dZ^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial Z^{[l]}} = dA^{[l]} * g'(Z^{[l]})$. We want to get $(dW^{[l]}, db^{[l]}, dA^{[l-1]})$.\n",
+    "\n",
+    "<img src=\"images/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
+    "<caption><center> **Figure 4** </center></caption>\n",
+    "\n",
+    "The three outputs $(dW^{[l]}, db^{[l]}, dA^{[l-1]})$ are computed using the input $dZ^{[l]}$.Here are the formulas you need:\n",
+    "$$ dW^{[l]} = \\frac{\\partial \\mathcal{J} }{\\partial W^{[l]}} = \\frac{1}{m} dZ^{[l]} A^{[l-1] T} \\tag{8}$$\n",
+    "$$ db^{[l]} = \\frac{\\partial \\mathcal{J} }{\\partial b^{[l]}} = \\frac{1}{m} \\sum_{i = 1}^{m} dZ^{[l](i)}\\tag{9}$$\n",
+    "$$ dA^{[l-1]} = \\frac{\\partial \\mathcal{L} }{\\partial A^{[l-1]}} = W^{[l] T} dZ^{[l]} \\tag{10}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make `linear_activation_backward` more clear, we provided two backward helper functions:\n",
+    "- **`sigmoid_backward`**: Implements the backward propagation for SIGMOID unit.\n",
+    "\n",
+    "- **`relu_backward`**: Implements the backward propagation for RELU unit.\n",
+    "\n",
+    "If $g(.)$ is the activation function, \n",
+    "`sigmoid_backward` and `relu_backward` compute $$dZ^{[l]} = dA^{[l]} * g'(Z^{[l]}) \\tag{11}$$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relu_backward(dA, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for a single RELU unit.\n",
+    "\n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient, of any shape\n",
+    "    cache -- 'Z' where we store for computing backward propagation efficiently\n",
+    "\n",
+    "    Returns:\n",
+    "    dZ -- Gradient of the cost with respect to Z\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Z = cache\n",
+    "    dZ = np.array(dA, copy=True) # just converting dz to a correct object.\n",
+    "    \n",
+    "    # When z <= 0, we set dz to 0 as well. \n",
+    "    dZ[Z <= 0] = 0\n",
+    "    \n",
+    "    assert (dZ.shape == Z.shape)\n",
+    "    \n",
+    "    return dZ\n",
+    "\n",
+    "def sigmoid_backward(dA, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for a single SIGMOID unit.\n",
+    "\n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient, of any shape\n",
+    "    cache -- 'Z' where we store for computing backward propagation efficiently\n",
+    "\n",
+    "    Returns:\n",
+    "    dZ -- Gradient of the cost with respect to Z\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Z = cache\n",
+    "    \n",
+    "    s = 1/(1+np.exp(-Z))\n",
+    "    dZ = dA * s * (1-s)\n",
+    "    \n",
+    "    assert (dZ.shape == Z.shape)\n",
+    "    \n",
+    "    return dZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_activation_backward(dA, cache, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient for current layer l \n",
+    "    cache -- tuple of values (linear_cache, activation_cache) we store for computing backward propagation efficiently\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    linear_cache, activation_cache = cache\n",
+    "    \n",
+    "    if activation == \"relu\":\n",
+    "        dZ = relu_backward(dA, activation_cache)\n",
+    "        \n",
+    "        A_prev, W, b = linear_cache\n",
+    "        m = A_prev.shape[1]\n",
+    "\n",
+    "        dW = 1/m * np.dot(dZ, A_prev.T)\n",
+    "        db = 1/m * np.sum(dZ, axis=1, keepdims=True)\n",
+    "        dA_prev = np.dot(W.T, dZ)\n",
+    "\n",
+    "    elif activation == \"sigmoid\":\n",
+    "        dZ = sigmoid_backward(dA, activation_cache)\n",
+    "        \n",
+    "        A_prev, W, b = linear_cache\n",
+    "        m = A_prev.shape[1]\n",
+    "\n",
+    "        dW = 1/m * np.dot(dZ, A_prev.T)\n",
+    "        db = 1/m * np.sum(dZ, axis=1, keepdims=True)\n",
+    "        dA_prev = np.dot(W.T, dZ)\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L-Model Backward \n",
+    "\n",
+    "Now we will implement the backward function for the whole network. Recall that when we implemented the `L_model_forward` function, at each iteration, we stored a cache which contains (X,W,b, and z). In the back propagation module, you will use those variables to compute the gradients. Therefore, in the `L_model_backward` function, we will iterate through all the hidden layers backward, starting from layer $L$. On each step, we will use the cached values for layer $l$ to backpropagate through layer $l$. Figure 5 below shows the backward pass. \n",
+    "\n",
+    "\n",
+    "<img src=\"images/mn_backward.png\" style=\"width:450px;height:300px;\">\n",
+    "<caption><center>  **Figure 5** : Backward pass  </center></caption>\n",
+    "\n",
+    "** Initializing backpropagation**:\n",
+    "To backpropagate through this network, we know that the output is, \n",
+    "$A^{[L]} = \\sigma(Z^{[L]})$. Your code thus needs to compute `dAL` $= \\frac{\\partial \\mathcal{L}}{\\partial A^{[L]}}$.\n",
+    "To do so, use this formula (derived using calculus which we skip the in-depth calculus):\n",
+    "```python\n",
+    "dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL)) # derivative of cost with respect to AL\n",
+    "```\n",
+    "\n",
+    "We can then use this post-activation gradient `dAL` to keep going backward. As seen in Figure 5, we can now feed in `dAL` into the LINEAR->SIGMOID backward function we implemented (which will use the cached values stored by the L_model_forward function). After that, we will have to use a `for` loop to iterate through all the other layers using the LINEAR->RELU backward function. We should store each dA, dW, and db in the grads dictionary. To do so, use this formula : \n",
+    "\n",
+    "$$grads[\"dW\" + str(l)] = dW^{[l]}\\tag{15} $$\n",
+    "\n",
+    "For example, for $l=3$ this would store $dW^{[l]}$ in `grads[\"dW3\"]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def L_model_backward(AL, Y, caches):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
+    "    \n",
+    "    Arguments:\n",
+    "    AL -- probability vector, output of the forward propagation (L_model_forward())\n",
+    "    Y -- true \"label\" vector (containing 0 if non-cat, 1 if cat)\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_activation_forward() with \"relu\" (it's caches[l], for l in range(L-1) i.e l = 0...L-2)\n",
+    "                the cache of linear_activation_forward() with \"sigmoid\" (it's caches[L-1])\n",
+    "    \n",
+    "    Returns:\n",
+    "    grads -- A dictionary with the gradients\n",
+    "             grads[\"dA\" + str(l)] = ... \n",
+    "             grads[\"dW\" + str(l)] = ...\n",
+    "             grads[\"db\" + str(l)] = ... \n",
+    "    \"\"\"\n",
+    "    grads = {}\n",
+    "    L = len(caches) # the number of layers\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
+    "    \n",
+    "    # Initializing the backpropagation\n",
+    "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
+    "    \n",
+    "    # Lth layer (SIGMOID -> LINEAR) gradients. Inputs: \"dAL, current_cache\". Outputs: \"grads[\"dAL-1\"], grads[\"dWL\"], grads[\"dbL\"]\n",
+    "    current_cache = caches[-1]\n",
+    "    grads[\"dA\" + str(L-1)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, activation = \"sigmoid\")\n",
+    "    \n",
+    "    # Loop from l=L-2 to l=0\n",
+    "    for l in reversed(range(L-1)):\n",
+    "        # lth layer: (RELU -> LINEAR) gradients.\n",
+    "        # Inputs: \"grads[\"dA\" + str(l + 1)], current_cache\". Outputs: \"grads[\"dA\" + str(l)] , grads[\"dW\" + str(l + 1)] , grads[\"db\" + str(l + 1)] \n",
+    "        current_cache = caches[l]\n",
+    "        print(l)\n",
+    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l+1)], current_cache, activation = \"relu\")\n",
+    "        grads[\"dA\" + str(l)] = dA_prev_temp\n",
+    "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
+    "        grads[\"db\" + str(l + 1)] = db_temp\n",
+    "\n",
+    "    return grads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update Parameters\n",
+    "\n",
+    "In this section we will update the parameters of the model, using gradient descent: \n",
+    "\n",
+    "$$ W^{[l]} = W^{[l]} - \\alpha \\text{ } dW^{[l]} \\tag{16}$$\n",
+    "$$ b^{[l]} = b^{[l]} - \\alpha \\text{ } db^{[l]} \\tag{17}$$\n",
+    "\n",
+    "where $\\alpha$ is the learning rate. After computing the updated parameters, store them in the parameters dictionary. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_parameters(parameters, grads, learning_rate):\n",
+    "    \"\"\"\n",
+    "    Update parameters using gradient descent\n",
+    "    \n",
+    "    Arguments:\n",
+    "    parameters -- python dictionary containing your parameters \n",
+    "    grads -- python dictionary containing your gradients, output of L_model_backward\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your updated parameters \n",
+    "                  parameters[\"W\" + str(l)] = ... \n",
+    "                  parameters[\"b\" + str(l)] = ...\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    L = len(parameters) // 2 # number of layers in the neural network\n",
+    "\n",
+    "    # Update rule for each parameter. Use a for loop.\n",
+    "    for l in range(L):\n",
+    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate*grads[\"dW\" + str(l+1)]\n",
+    "        parameters[\"b\" + str(l+1)] = parameters[\"b\" + str(l+1)] - learning_rate*grads[\"db\" + str(l+1)]\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
