--- a/artificial_neural_network.ipynb
+++ b/artificial_neural_network.ipynb
@@ -161,7 +161,7 @@
     "    L = len(layer_dims)   # number of layers in the network\n",
     "\n",
     "    for l in range(1, L):\n",
-    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1]) * 0.01\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1]) * np.sqrt(2/layers_dims[l-1])\n",
     "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
     "        \n",
     "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
