Implemented CNN from scratch

--- a/artificial_neural_network.ipynb
+++ b/artificial_neural_network.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% # Building a FeedForward Neural Network\n"
+    }
+   },
    "source": [
-    "# Building a FeedForward Neural Network\n",
-    "\n",
     "- In this notebook, we will implement all the functions required to build a deep neural network.\n",
     "\n",
     "**Notation**:\n",
@@ -15,7 +17,9 @@
     "    - Example: $x^{(i)}$ is the $i^{th}$ training example.\n",
     "- Lowerscript $i$ denotes the $i^{th}$ entry of a vector.\n",
     "    - Example: $a^{[l]}_i$ denotes the $i^{th}$ entry of the $l^{th}$ layer's activations)."
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
